<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/previous_search_query"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:text="@string/searchQueryExample"
            android:layout_weight="70"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/separator"
            android:layout_margin="5dp"
            android:layout_weight="10"/>

        <TextView
            android:id="@+id/previous_search_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dateExample"
            android:textStyle="italic"
            android:textColor="@android:color/darker_gray"
            android:layout_margin="5dp"
            android:layout_weight="20"/>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>