<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/searchTextField"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="98"
                android:fontFamily="serif-monospace"
                android:hint="@string/searchFieldHint"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/searchButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:fontFamily="casual"
                android:text="@string/searchBtnText"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="20sp"
                android:visibility="visible" />

        </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/clearButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/clearBtnText"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textStyle="italic" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/searchRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.adrianpothuaud.YouTubeSearch.activities.SearchActivity"/>

    </LinearLayout>